--- a/overrides/main.html
+++ b/overrides/main.html
@@ -9,14 +9,14 @@ This lesson is under active development and considered pre-alpha.
   {
     "@context": "https://schema.org/",
     "@type": "LearningResource",
-    "@id": "https://elixir-fair-training.github.io/FAIR-training-handbook/",
+    "@id": "https://elixir-europe-training.github.io/ELIXIR-TrP-LessonTemplateInstructions-MkDocs/",
     "http://purl.org/dc/terms/conformsTo": {
         "@type": "CreativeWork",
         "@id": "https://bioschemas.org/profiles/TrainingMaterial/1.0-RELEASE"
     },
-    "description": "Handbook for making training materials FAIR",
-    "keywords": "FAIR, OPEN, Bioinformatics, Teaching, Train-the-trainer",
-    "name": "FAIR training handbook",
+    "description": "Instructions for setting up a lesson using the lesson template",
+    "keywords": "FAIR, OPEN, Bioinformatics, Teaching",
+    "name": "Lesson template instruction MkDocs",
     "license": "https://creativecommons.org/licenses/by/4.0/"
 }
 </script>
